syntax = "proto3";
package payments;

service Solana {
    rpc SendPayment (SOLPaymentRequest) returns (SOLPaymentResponse);
}

message SOLPaymentRequest {
    string from_addr = 1;
    string to_addr = 2;
    uint32 amount = 3;
}

message SOLPaymentResponse {
    bool successful = 1;
    string message = 2;
}